--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,59 @@ ul {
     
   }
   .div2{
-      padding: 5px;
+      padding: 3px;
+      
       font-family: Arial, Helvetica, sans-serif;
   }
- 
+  .div3{
+    height: 15%;
+    width: 94%;
+    padding:3%;
+    background-color : rgb(206, 214, 192);
+    margin-right: 2px;
+}
+#h2{
+    margin: top 2px;;
+
+}
+.divm{
+    margin: 0 5% 2% 5%;
+    width:90%;
+
+}
+.div1{
+    float:left;
+    margin-left:3%;
+    margin-right:3%;
+    margin-bottom: 25px;
+    width:27%;
+    height:20%;
+    text-align:center;
+}
+.p2{
+    color:rgb(206, 214, 192);
+    background-color: rgb(206, 214, 192);
+    padding:15% 2% 15% 2%;
+
+}
+.p3{
+    margin: 2% 0;
+}
+ .div4{
+    margin-top:10px ;
+    width: 94%;
+    padding:1% 3% 1% 3%;
+    height: 20px;
+    text-align: center;
+    display:inline-block; 
+    background-color: rgb(206, 214, 192); 
+    
+    
+} 
+.sub{
+    color:rgb(31, 31, 119);
+}
+.lbl{
+    font-size: 20px;
+    font: bold;
+}
