--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@ ul {
     
   }
   .div2{
-      padding: 3px;
+      padding-left: 3%;
       
       font-family: Arial, Helvetica, sans-serif;
   }
@@ -82,6 +82,12 @@ ul {
     font-size: 23px;
     font: bold;
 }
-.text-field{
-    font-size: large;
+
+.divf1{
+    padding-left:2%;
+    float:left;
+}
+.divf2{
+    padding-right:2%;
+    float:right;
 }
