--- a/src/style.css
+++ b/src/style.css
@@ -1,93 +1,97 @@
+* {
+  font-family: sans-serif;
+}
+#mainDiv {
+  margin: 4px;
+}
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-  
-  li {
-    float: right;
-  }
-  
-  li a {
-    display: block;
-    padding: 8px;
-    
-  }
-  .div2{
-      padding-left: 3%;
-      
-      font-family: Arial, Helvetica, sans-serif;
-  }
-  .div3{
-    height: 15%;
-    width: 94%;
-    padding:3%;
-    background-color : rgb(206, 214, 192);
-    margin-right: 2px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
-#h2{
-    margin: top 2px;;
 
+li {
+  float: right;
 }
-.divm{
-    margin: 0 5% 2% 5%;
-    width:90%;
 
+li a {
+  display: block;
+  padding: 8px;
 }
-.div1{
-    float:left;
-    margin-left:3%;
-    margin-right:3%;
-    margin-bottom: 25px;
-    width:27%;
-    height:20%;
-    text-align:center;
+.div2 {
+  padding-left: 3%;
 }
-.p2{
-    color:rgb(206, 214, 192);
-    background-color: rgb(206, 214, 192);
-    padding:15% 2% 15% 2%;
-
+.div3 {
+  height: 15%;
+  width: 94%;
+  padding: 3%;
+  background-color: rgb(221, 228, 212);
+  margin-right: 2px;
 }
-.p3{
-    margin: 2% 0;
+#h2 {
+  margin: top 2px;
 }
- .div4{
-    margin-top:10px ;
-    width: 94%;
-    padding:1.2% 3% 2% 3%;
-    height: 20px;
-    text-align: center;
-    display:inline-block; 
-    background-color: rgb(206, 214, 192); 
-    
-    
-} 
+.divm {
+  margin: 0 5% 2% 5%;
+  width: 90%;
+}
+.div1 {
+  float: left;
+  margin-left: 3%;
+  margin-right: 3%;
+  margin-bottom: 25px;
+  width: 27%;
+  height: 20%;
+  text-align: center;
+}
+.p2 {
+  color: rgb(206, 214, 192);
+  background-color: rgb(221, 228, 212);
+  padding: 15% 2% 15% 2%;
+}
+.p3 {
+  margin: 2% 0;
+}
+.div4 {
+  margin-top: 10px;
+  width: 94%;
+  padding: 1.2% 3% 2% 3%;
+  height: 20px;
+  text-align: center;
+  display: inline-block;
+  background-color: rgb(221, 228, 212);
+}
 .button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 4px 12px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-  }
-
-  .button2 {background-color: #008CBA;}
-.lbl{
-    font-size: 23px;
-    font: bold;
+  background-color: #4caf50; /* Green */
+  border: none;
+  color: white;
+  padding: 0.1em 3em 0.2em 3em;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
-.divf1{
-    padding-left:2%;
-    float:left;
+.button2 {
+  background-color: #008cba;
 }
-.divf2{
-    padding-right:2%;
-    float:right;
+.lbl {
+  font-size: 16px;
+  font: bold;
+  font-weight: 650;
+}
+
+.divf1 {
+  padding-left: 2%;
+  float: left;
+}
+.divf2 {
+  padding-right: 2%;
+  float: right;
+}
+.text-field {
+  padding: 2px 22px 2.5px 22px;
 }
